--- a/data/demo.html
+++ b/data/demo.html
@@ -46,10 +46,30 @@ Address:
 <br>
 <input type="text" value="">
 <br>
-<input type="text" value="">
+
+<input list="browsers" name="browser">
+  <datalist id="browsers">
+    <option value="Internet Explorer">
+    <option value="Firefox">
+    <option value="Chrome">
+    <option value="Opera">
+    <option value="Safari">
+  </datalist>
+  
+<br>
+<br> 
+  <input type="checkbox" name="vehicle" value="Bike"> I have a bike<br>
+  <input type="checkbox" name="vehicle" value="Car" checked> I have a car<br>
+  <input type="text" value="">
 <br>
 <br>
 
+
+<br>
+<br> 
+<input type="text" value="">
+<br>
+<br>
 
 <textarea>User Comments Here: </textarea> 
 <br>
