--- a/data/demo.html
+++ b/data/demo.html
@@ -47,44 +47,41 @@ Address:
 <input type="text" value="">
 <br>
 
-<input list="browsers" name="browser">
+<br>
+
+<span> List: </span>
+
+<form action="demo_form.asp" method="get">
+  <input list="browsers"  name="browser" placeholder="Choose your browser!">
   <datalist id="browsers">
-    <option value="Internet Explorer">
-    <option value="Firefox">
-    <option value="Chrome">
-    <option value="Opera">
-    <option value="Safari">
+	<select>
+    <option value="Internet Explorer"></option>
+    <option value="Firefox"> Firefox </option>
+    <option value="Chrome"></option>
+    <option value="Opera"></option>
+    <option value="Safari" selected></option>
+	</select>
   </datalist>
-  
+</form>
+
+<br>
+<br> 
+
+<span>Choose a car:</span>
+<br>
+ <select>
+  <option value="volvo">Volvo</option>
+  <option value="saab">Saab</option>
+  <option value="vw">VW</option>
+  <option value="audi" selected>Audi</option>
+</select> 
 <br>
 <br> 
   <input type="checkbox" name="vehicle" value="Bike"> I have a bike<br>
   <input type="checkbox" name="vehicle" value="Car" checked> I have a car<br>
-  <input type="text" value="">
-<br>
-<br>
-
-
-<br>
-<br> 
-<input type="text" value="">
-<br>
-<br>
-
-<textarea>User Comments Here: </textarea> 
 <br>
 <br>
 <textarea>User Comments Here: </textarea> 
-<br>
-<br>
-<textarea>User Comments Here: </textarea> 
-<br>
-<br>
-<textarea>User Comments Here: </textarea> 
-<br>
-<br>
-<textarea>User Comments Here: </textarea> 
-
 <br>
 <br>
 Frame:
